[tool.poetry]
name = "hk-climb-price-crawler"
version = "0.1.0"
description = "Web crawler on climbing gyms in Hong Kong"
authors = ["edgar.chan <elcchan99@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
flake8 = "^3.8.4"
isort = "^5.6.4"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "logging-fstring-interpolation",
    "no-init",
    "no-self-use",
    'too-few-public-methods'
]
